fixed spacing around title

--- a/app.css
+++ b/app.css
@@ -34,6 +34,7 @@ em {
 h1 {
   color: green;
   font-family: OCR A Std, monospace;
+  padding: 30px
 }
 h2 {
   font-family: OCR A Std, monospace;
